--- a/app/src/main/res/layout/activity_event_announcement.xml
+++ b/app/src/main/res/layout/activity_event_announcement.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
             android:orientation="vertical"
             android:paddingLeft="4dp"
@@ -25,6 +25,7 @@
                 android:id="@+id/linear_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
@@ -57,6 +58,7 @@
                 android:id="@+id/linear_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
 
@@ -90,6 +92,7 @@
                 android:id="@+id/linear_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
@@ -126,11 +129,13 @@
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/description_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="102dp"
+                        android:layout_marginBottom="2dp"
                         android:hint="@string/description"
                         android:inputType="text" />
 
@@ -144,26 +149,28 @@
                     <com.google.android.gms.maps.MapView
                         android:id="@+id/mapView"
                         android:layout_width="match_parent"
-                        android:layout_height="173dp"
-                        android:layout_weight="1" />
+                        android:layout_height="205dp"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/common_google_signin_btn_icon_dark_normal" />
+
+                    <Button
+                        android:id="@+id/button"
+                        style="@android:style/Widget.Material.Light.Button.Toggle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_weight="1"
+                        android:background="?android:attr/statusBarColor"
+                        android:onClick="onclick"
+                        android:text="@string/button"
+                        tools:text="Valider" />
 
                 </android.support.design.widget.TextInputLayout>
+
             </LinearLayout>
-
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/floatingActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginTop="5dp"
-                android:backgroundTint="@color/colorPrimary"
-                android:src="@drawable/check_declaration"
-                android:tint="@android:color/background_light"
-                android:visibility="visible"
-                app:menu="@menu/check_declaration" />
 
         </LinearLayout>
 
