--- a/app/src/main/res/layout/activity_event_announcement.xml
+++ b/app/src/main/res/layout/activity_event_announcement.xml
@@ -34,7 +34,7 @@
                     android:layout_height="match_parent">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/nom"
+                        android:id="@+id/nom_input"
                         android:layout_width="190dp"
                         android:layout_height="wrap_content"
                         android:hint="@string/lastname" />
@@ -46,7 +46,7 @@
                     android:layout_height="match_parent">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/prenom"
+                        android:id="@+id/prenom_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/firstname" />
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/title"
+                        android:id="@+id/title_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/titre"
@@ -100,7 +100,7 @@
                     android:layout_height="match_parent">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/phone"
+                        android:id="@+id/phone_input"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/phonenumber"
@@ -133,6 +133,7 @@
                     android:layout_marginBottom="2dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/description_input"
                         android:layout_width="match_parent"
                         android:layout_height="102dp"
                         android:layout_marginBottom="2dp"
