--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
-    android:orientation="vertical"
-    tools:context="com.example.wangwei.polycare.activity.MainActivity">
-
+    android:fitsSystemWindows="true"
+    android:clipToPadding="true"
+    tools:context=".activity.MainActivity">
 
     <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="50dp"
-        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:id="@+id/bottom_menu"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/filtre"
-            android:layout_width="24dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
+            android:id="@+id/txt_homepage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/filtre" />
-
-        <Spinner
-            android:id="@+id/Spinner_cate"
-            android:layout_width="149dp"
-            android:layout_height="45dp"
-            android:layout_weight="1"
-            android:background="@android:drawable/btn_dropdown"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="1dp">
-
-        </Spinner>
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/ic_home_black_24dp"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="@string/acueil"
+            android:textColor="@drawable/homepage_txt" />
 
         <TextView
-            android:id="@+id/tri"
-            android:layout_width="34dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
+            android:id="@+id/txt_graphe"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/tri_par" />
+            android:background="@drawable/tab_bg"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/ic_insert_chart_black_24dp"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="@string/graph"
+            android:textColor="@drawable/graphe_txt" />
 
-        <Spinner
-            android:id="@+id/Spinner_tri"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
+        <TextView
+            android:id="@+id/txt_map"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:drawable/btn_dropdown"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="1dp">
+            android:background="@drawable/tab_bg"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/ic_location_on_black_24dp"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="@string/map"
+            android:textColor="@drawable/map_txt" />
 
-        </Spinner>
+
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <FrameLayout
+        android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp">
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_menu"
+        android:layout_marginBottom="-3dp"
+        android:background="#F1F1F1">
 
+    </FrameLayout>
 
-    </android.support.v7.widget.RecyclerView>
-
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:background="#cbd0e9"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
