--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".activity.EventActivity">
 
@@ -80,7 +81,6 @@
                     android:id="@+id/importance_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:drawableEnd="?android:attr/colorSecondary"
                     tools:targetApi="n_mr1"
                     tools:text="Urgence" />
 
