--- a/app/src/main/res/layout/homepage_fragment.xml
+++ b/app/src/main/res/layout/homepage_fragment.xml
@@ -75,13 +75,11 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end|right"
-            android:layout_marginLeft="330dp"
-            android:backgroundTint="@color/colorPrimary"
+            android:layout_gravity="bottom"
+            app:backgroundTint="@color/colorPrimary"
             android:clickable="true"
             android:visibility="visible"
-            app:srcCompat="@android:drawable/ic_menu_edit"
-            tools:clickable="true" />
+            app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </LinearLayout>
 
