--- a/app/src/main/res/layout-land/change_event_item_land.xml
+++ b/app/src/main/res/layout-land/change_event_item_land.xml
@@ -30,28 +30,28 @@
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="280dp"
-                    android:layout_height="match_parent">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/nom_input"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/nom"
-                        android:inputType="text" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/prenom_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/pernom" />
+
                 </android.support.design.widget.TextInputLayout>
+
+                <Spinner
+                    android:id="@+id/Spinner_category"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/btn_dropdown"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="1dp">
+
+                </Spinner>
 
             </LinearLayout>
 
@@ -64,8 +64,9 @@
 
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/title_input"
@@ -77,7 +78,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Spinner
-                    android:id="@+id/Spinner_category"
+                    android:id="@+id/Spinner_urgence"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -97,8 +98,9 @@
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="280dp"
-                    android:layout_height="match_parent">
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/phone_input"
@@ -110,33 +112,13 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Spinner
-                    android:id="@+id/Spinner_urgence"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:drawable/btn_dropdown"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="1dp">
-
-                </Spinner>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:orientation="horizontal">
-
-                <Spinner
                     android:id="@+id/Spinner_state"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@android:drawable/btn_dropdown">
 
                 </Spinner>
-
 
             </LinearLayout>
 
@@ -154,7 +136,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/description_input"
                         android:layout_width="match_parent"
-                        android:layout_height="102dp"
+                        android:layout_height="100dp"
                         android:layout_marginBottom="2dp"
                         android:hint="@string/description"
                         android:inputType="text" />
