--- a/app/src/main/res/layout/change_event_item.xml
+++ b/app/src/main/res/layout/change_event_item.xml
@@ -30,8 +30,9 @@
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="190dp"
-                    android:layout_height="match_parent">
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/prenom_input"
@@ -63,8 +64,9 @@
 
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="190dp"
-                    android:layout_height="wrap_content">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/title_input"
@@ -96,8 +98,9 @@
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="190dp"
-                    android:layout_height="match_parent">
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/phone_input"
@@ -110,7 +113,7 @@
 
                 <Spinner
                     android:id="@+id/Spinner_state"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@android:drawable/btn_dropdown">
@@ -133,7 +136,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/description_input"
                         android:layout_width="match_parent"
-                        android:layout_height="102dp"
+                        android:layout_height="100dp"
                         android:layout_marginBottom="2dp"
                         android:hint="@string/description"
                         android:inputType="text" />
