--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/txt_homepage"
@@ -31,7 +30,7 @@
 
         <TextView
             android:id="@+id/txt_graphe"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/tab_bg"
@@ -61,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_menu"
-        android:background="#F1F1F1">
+        android:background="?android:attr/windowBackgroundFallback">
 
     </FrameLayout>
 
