--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -19,8 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal">
+            android:layout_height="35dp">
 
             <TextView
                 android:id="@+id/title"
@@ -62,7 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
-                android:layout_weight="0.2"
+                android:layout_weight="0.3"
                 android:gravity="left"
                 android:text="@string/arthor" />
 
@@ -73,6 +72,13 @@
                 android:layout_weight="1"
                 android:gravity="left"
                 android:text="@string/descriptions" />
+
+            <TextView
+                android:id="@+id/state"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:text="@string/tat" />
 
         </LinearLayout>
 
