--- a/app/src/main/res/menu/top_choix.xml
+++ b/app/src/main/res/menu/top_choix.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
         <item
-            android:id = "@+id/filtre"
-            android:title= "Filtre par"/>
+            android:id = "@+id/graphe_urgence"
+            android:title= "@string/graphe_d_urgence"/>
         <item
-            android:id="@+id/sort"
-            android:title="Tri par"/>
+            android:id="@+id/graphe_state"
+            android:title="@string/graphe_d_etat"/>
+        <item
+            android:id="@+id/graphe_cate"
+            android:title="@string/graphe_de_category"/>
 
 </menu>
